add more section 2

--- a/notes/2.md
+++ b/notes/2.md
@@ -2,13 +2,17 @@
 
 This section discusses operators and expressions.
 
--------------------------------------------------------------------------------
-## Operators
-
 Operators are special symbols which produce some result given 1, 2, or 3
 values.  They are usually similar to the operators you would see on a four
 function calculator, for example `+ - * /` are all operators in C, and they
 behave similar to how you might expect.
+
+Unary operators act on 1 operand
+Binary operators act on 2 operands
+Ternary operators act on 3 operands
+
+-------------------------------------------------------------------------------
+## Binary Operators
 
 ### Addition (`+`)
 
@@ -55,11 +59,11 @@ merely plays along, and adds them as it would normally.  Except in this case,
 there is a carry at the end that the variable simply as no space for, and it
 discards it.  This is called overflow.  You should notice then that the result
 isn't completely random.  The result is what happens when you add the numbers
-normally, except that past 32,767 it loops around to `-32,768`.  However, this
-is not strictly defined in the standard, and a different compiler on a
-different machine may produce a different result!  So if you are trying to
-write very safe code, you need to be very careful, and avoid overflow from
-happening in the first place.
+normally, except that past 32,767 it loops around to `-32,768`.
+
+However when dealing with signed ints this behavior is not defined in the
+standard, and a different compiler on a different machine may produce a
+different result!  
 
 ```c
 #include <stdio.h> /* printf */
@@ -75,18 +79,23 @@ int main() {
 32767 + 1 = -32768
 ```
 
+However, the behavior is well defined for unsigned integers
+meaning you can count on an unsigned integer wrapping to `0` when you exceed
+it maximum value via addition.
+
 ```c
 #include <stdio.h> /* printf */
 
 int main() {
-    short a = 32767;
-    short b = 32767;
-    short c = a + b;
+    unsigned short a = 65535;
+    unsigned short b = 1;
+    unsigned short c = a + b;
     printf("%d + %d = %d\n", a, b, c);
 }
+
 ```
 ```
-32767 + 32767 = -2
+65535 + 1 = 0
 ```
 
 In this course, it will generally be okay to use long integers and hope for the
@@ -94,6 +103,11 @@ best.
 
 **Question: Can you write code to check if an overflow will occur before
 actually performing an addition?**
+
+### Subtraction (`-`)
+
+Subtraction works similar to addition, and has more or less the same overflow
+potential.
 
 ### Multiplication (`*`)
 
@@ -138,7 +152,7 @@ Multiplication of floating point numbers is similar.  While overflow is still a
 possibility, it is less of a concern due to the large range of floating point
 numbers.
 
-### Division (`*`)
+### Division (`/`)
 
 This is an example of division for two integers:
 
@@ -195,3 +209,414 @@ in the decimal format without an infinite number of digits.
 This shows an an important lesson: you should generally not check to see if
 two floating point numbers are equal, but just that they are close enough, or
 if their difference is small.
+
+**Challenge: What kinds of fractions can be represented in finitely many
+bits?**
+
+### Remainder or Modulo (`%`)
+
+If you want to get the remainder of a division without actually dividng the
+numbers you can use the `%` (modulo) operator.  `a % b` finds the remainder of
+`a` divided by `b`.  In most cases this is used to cap at some value create a
+repeating sequence as demonstrated below:
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int a = 0 % 3;
+    int b = 1 % 3;
+    int c = 2 % 3;
+    int d = 3 % 3;
+    int e = 4 % 3;
+    int f = 5 % 3;
+    int g = 6 % 3;
+    printf("%d, %d, %d, %d, %d, %d, %d\n", a, b, c, d, e, f, g);
+}
+```
+```
+0, 1, 2, 0, 1, 2, 0
+```
+
+### Assignemnt Operators
+
+Sometimes you don't want to create a whole new value from an operator, you
+only want to update an existing value, this is where assignment operators
+come in.  Most binary operators have a corresponding assignment operator as
+see in this code snippet.
+
+```c
+#include <stdio.h>
+
+int main() {
+    int x = 0;
+    printf("x = %d\n", x);
+    x = x + 2;
+    printf("x = %d\n", x);
+    x += 2;
+    printf("x = %d\n", x);
+    x *= 2;
+    printf("x = %d\n", x);
+    x /= 2;
+    printf("x = %d\n", x);
+}
+```
+```
+x = 0
+x = 2
+x = 4
+x = 8
+x = 4
+```
+
+Note that an assignment operator is never necessary, and you can just about
+always replace something like `x += 2` with something like `x = x + 2`.  It
+is just a bit more concise and easy to follow.
+
+### Relational Operators
+
+Relational operators are used to compare two values.  They are similar to 
+operators you are already familiar with from math, so we won't go into too much
+depth on each one.
+
+### Less Than (`<`)
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 312;
+    int y = 256;
+    int xlty = x < y;
+    int yltx = y < x;
+    printf("xlty = %d\n", xlty);
+    printf("yltx = %d\n", yltx);
+}
+```
+```
+xlty = 0
+yltx = 1
+```
+
+From the example, we can see that the operator gives us a 1 if the condition
+is true, and a 0 otherwise.  You can also check out the operators `> >= <=`
+
+### Equality (`==`)
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 256;
+    int y = 256;
+    int z = 123;
+    int xeqy = x == y;
+    int xeqz = x == z;
+    printf("xeqy = %d\n", xeqy);
+    printf("xeqz = %d\n", xeqz);
+}
+```
+```
+xeqy = 1
+xeqz = 0
+```
+
+We can also test for exact equality using the `==` operator as shown above.
+Note it is a common mistake to use `=` when checking if two values are equal.
+This is especially dangerous because it is not illegal to do so, as we will
+speak about in the expressions section.  You can also try out the not equal
+operator `!=`
+
+### Logical Operators (`||`, `&&`, `!`)
+
+Logical operators allow us to combine multiple relations into a single truth
+value.  For example we can check if a number is in a certain range like the
+example below
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 256;
+    int inRange = (x > 128) && (x < 512);
+    int notInRange = !((x > 128) && (x < 512));
+    printf("inRange = %d\n", inRange);
+    printf("notInRange = %d\n", notInRange);
+}
+```
+```
+inRange = 1
+notInRange = 0
+```
+
+- The `||` (called logical or) operator is true if either side is true.
+- The `&&` (called logical and) operator is true if either both sides are true.
+- The `!` (called not) operator is true if the following expression is false.
+
+Note that the precedence (meaning the order in which the operators are applied)
+is not usually very obvious, so you should generally add extra parentheses if 
+you are unsure, as we did above.  We will give a brief overview of precedence
+at the end of this section.
+
+### Bitwise Operators (`|`, `&`, `^`, `<<`, `>>`, `~`)
+
+Bitwise operators may be useful if you are trying to make code really fast.
+However, I will warn you here that you are usually better off trying to avoid
+them, as they often obscure the coder's intention.  A binary operator only 
+looks at the raw binary of a value with no regard toward its type.
+
+- The `|` (called bitwise or) operator returns the OR of each bit of both
+  values
+- The `&` (called bitwise and) operator returns the AND of each bit of both
+  values
+- The `^` (called bitwise xor) operator returns the XOR of each bit of both
+  values
+- The `<<` (called shift left) operator returns the same number, but with all
+  bits shifted to the left
+- The `>>` (called shift right) operator returns the same number, but with all
+  bits shifted to the right
+- The `~` (called complement) operator returns the same number, but with all
+  bits flipped (0 becomes 1, 1 becomes 0)
+
+A common mistake is to use these operators instead of the logical operators
+when crafting an expression.  As a general rule unless you're trying to be
+really (overly) clever, use the logical operators, not bitwise!
+
+Below shows a quick example of using the shift operators to multiply or divide
+by 2.  Note that with modern optimization techniques, this would probably
+not be much faster than explicitly multiplying or dividing by 2.
+
+## Unary Operators
+
+Unary operators take a single value and produce a single value.
+
+### Negate
+
+One very common unary operator is negation.  It is very intuitive, and you
+would probably understand it without even seeing an example but I will give you
+one anyway.
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 512;
+    int y = -x;
+    printf("x = %u\n", x);
+    printf("y = %u\n", y);
+}
+```
+```
+x = 512
+y = 4294966784
+```
+
+As is expected, the value given is negated.  Just be careful not to use it with
+unsigned values, or you may get strange results.
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    unsigned int x = 512;
+    unsigned int y = -x;
+    printf("x = %u\n", x);
+    printf("y = %u\n", y);
+}
+```
+```
+x = 512
+y = 4294966784
+```
+
+### Increment and Decrement Operators
+
+Another common unary operator are the increment and decrement operators as
+shown below
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 0;
+    printf("x = %d\n", x);
+    x++;
+    printf("x = %d\n", x);
+    x--;
+    printf("x = %d\n", x);
+}
+```
+```
+x = 0
+x = 1
+x = 0
+```
+
+As you can see, these increment or decrement a value by 1, in place.  Note this
+operator can be applied to the front or end of a value as shown below, with
+one minor distinction.
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 0;
+    int y = 0;
+    printf("x++ = %d\n", x++);
+    printf("++y = %d\n", ++y);
+    printf("x = %d\n", x);
+    printf("y = %d\n", y);
+}
+```
+```
+x++ = 0
+++y = 1
+x = 1
+y = 1
+```
+
+If you use `x++` the effect will only be applied after the expression has been
+evaluated (meaning it will hold the old value just before the next line of
+code).  Otherwise if you use `++x` the update will be immediately applied
+
+## Ternary Operator
+
+The ternary operator is not very often used, and you never really need it.
+However you still might see it in the wild so it's worth learning about.  The
+ternary operator in C takes three values and produces one.
+The basic template for the operator is 
+
+```
+(expression) ? (expression if true) : (expression if false)
+```
+
+This can be read as follows: Is `expression` true? If so, give `expression if
+true`, otherwise: give `expression if false`
+
+The syntax is demonstrated below
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int x = 256;
+    int y = 312;
+    // Get the larger value
+    int z = x > y ? x : y;
+    printf("max = %d\n", z);
+}
+```
+```
+max = 312
+```
+
+### Type Conversions
+
+All of the previous examples we looked at were operators on the same types,
+however it's perfectly valid to use an operator on two different types like
+in this example.
+
+```c
+#include <stdio.h> // printf
+
+int main() {
+    int a = 5;
+    char b = a + '0';
+    printf("(char) b = %c\n", b);
+    printf("(int) b = %d\n", b);
+}
+```
+```
+(char) b = 5
+(int) b = 53
+```
+
+Here we combine the integer `5` with the character `'0'` viw the `+` operator.
+Conversions will automatically take place if a more "narrow" type is being
+automatically converted to a less "narrow" type.  There are two automatic
+conversions taking place in the above code.  First is the conversion of `'0'`
+from `char` to `int` which happens when we add it to the `int` `a`.  Then,
+Because we are assigning the expression `a + '0'` to a `char`, we are
+converting from `int` to `char`.
+
+Note that when we print the value stored in `b` we either interpret it as a
+character (`%c`) or an integer (`%d`) which changes how the value is displayed.
+
+The general rules (from "The C Programming Language") are shown here:
+
+1. If either operand is long double, convert the other to long double.
+2. Otherwise, if either operand is double, convert the other to double.
+3. Otherwise, if either operand is float, convert the other to float.
+4. Otherwise, convert char and short to int.
+5. Then, if either operand is long, convert the other to long.
+
+### Casting
+
+Rather than creating a new variable to perform a conversion, you can also
+`cast` a value on the fly.  For example, if you want to perform a floating
+point division rather than an integer division.
+
+```c
+#include <stdio.h> // printf
+
+int main() {
+    int a = 5;
+    int b = 3;
+    printf("(int) %d / %d = %d\n", a, b, a / b);
+    printf("(float) %d / %d = %f\n", a, b, (float) a / b);
+}
+```
+```
+(int) 5 / 3 = 1
+(float) 5 / 3 = 1.666667
+```
+
+The above code casts `a` to a `float` before performing the division and so
+`b` is automatically converted as per the previous rules, and the result
+is a `float`.
+
+## Expressions
+
+Most lines of code we have seen so far are expressions.  An expression is
+simply any combination of variables, constants, and operators, which we
+have mostly finished explaining by now.  Here are some examples of expressions:
+
+```
+123 + 25
+123 * 25 - 13
+a * b + c
+a * (-c)
+a * b == c * d
+(a == b) && (c == d)
+```
+
+When you try to interpet these, you should check how each part of the
+expression "resolves" to a value to understand it.  For example in the last
+expression, first check if `(a == b)` is true, then check if `(c == d)` is true
+and then check if they are both true to check if the expression is true.  You
+can replace each part of the expression one piece at a time to break it down
+and understand it.  In order to know which part the computer will evaluate
+first, you have to look at precedence.
+
+```
+() [] -> .
+! ~ ++ -- + - * (type)
+* / %
++ -
+<< >>
+< <= > >=
+== !=
+&
+^
+|
+&&
+||
+?:
+= += -= *= /= %= &= ^= |= <<= >>=
+,
+```
+
+Note that it is similar to the PEMDAS system we all know at love, but with a
+lot more rules.  As always, use extra parentheses to make your intention clear,
+don't cram too many operators into one expression, and experiment with your
+code to help get it right.
