--- a/notes/2.md
+++ b/notes/2.md
@@ -104,6 +104,47 @@ best.
 **Question: Can you write code to check if an overflow will occur before
 actually performing an addition?**
 
+### Suffixes
+
+Overflow can also occur in more unexpected places, like the middle of an
+expression.  Consider the following piece of code:
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    long long int i = 60000 * 60000;
+    printf("%lld\n", i);
+}
+```
+```
+snippets/overflow_expression.c:4:29: warning: overflow in expression; result is -694967296 with type 'int' [-Winteger-overflow]
+    long long int i = 60000 * 60000;
+                            ^
+1 warning generated.
+```
+
+While the result `3600000000` is representable by a `long long int`, it is not
+representable by our machine's default `int`, resulting in overflow before the
+actual assignment takes place.  This can be fixed by explicitly saying that
+the constants are of type `long int` with suffixes:
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    long long int i = 60000L * 60000L;
+    printf("%lld\n", i);
+}
+```
+```
+3600000000
+```
+
+The suffix `L` or `l` specifies that the constant is a `long int`
+The suffix `LL` or `ll` specifies that the constant is a `long long int`
+The suffix `F` or `f` specifies that the constant is a `float`
+
 ### Subtraction (`-`)
 
 Subtraction works similar to addition, and has more or less the same overflow
