--- a/source/2.md
+++ b/source/2.md
@@ -63,6 +63,28 @@ best.
 **Question: Can you write code to check if an overflow will occur before
 actually performing an addition?**
 
+### Suffixes
+
+Overflow can also occur in more unexpected places, like the middle of an
+expression.  Consider the following piece of code:
+
+```snippet
+{"code": "snippets/overflow_expression.c"}
+```
+
+While the result `3600000000` is representable by a `long long int`, it is not
+representable by our machine's default `int`, resulting in overflow before the
+actual assignment takes place.  This can be fixed by explicitly saying that
+the constants are of type `long int` with suffixes:
+
+```snippet
+{"code": "snippets/overflow_expression_fixed.c"}
+```
+
+The suffix `L` or `l` specifies that the constant is a `long int`
+The suffix `LL` or `ll` specifies that the constant is a `long long int`
+The suffix `F` or `f` specifies that the constant is a `float`
+
 ### Subtraction (`-`)
 
 Subtraction works similar to addition, and has more or less the same overflow
