add printf snippet

--- a/source/1.md
+++ b/source/1.md
@@ -191,6 +191,48 @@ here.
 {"code": "snippets/short_vs_long.c"}
 ```
 
+# `printf`
+
+Here we have been using `printf` but not paying much attention to it.  `printf`
+lets us actually see the data we are manipulating and so it is important to
+take a moment and figure out how it works.
+
+One thing you should notice about `printf` is that we actually have to specify
+the type that we are giving it.  The reason we have to tell it the type
+explicitly is because it is not able to figure out the type of a variable
+itself.  This is because is is `varadic` meaning we can feed any number of
+variables of different types, and it doesn't know them beforehand.
+
+A helpful table, adapted from 
+[cplusplus.com][http://www.cplusplus.com/reference/cstdio/printf/]
+is show below.
+
+| Specifier | Output                                             | Example      |
+|-----------|----------------------------------------------------|--------------|
+| d or i    | Signed decimal integer                             | 392          |
+| u         | Unsigned decimal integer                           | 7235         |
+| o         | Unsigned octal                                     | 610          |
+| x         | Unsigned hexadecimal integer                       | 7fa          |
+| X         | Unsigned hexadecimal integer (uppercase)           | 7FA          |
+| f         | Decimal floating point, lowercase                  | 392.65       |
+| F         | Decimal floating point, uppercase                  | 392.65       |
+| e         | Scientific notation (mantissa/exponent), lowercase | 3.9265e+2    |
+| E         | Scientific notation (mantissa/exponent), uppercase | 3.9265E+2    |
+| g         | Use the shortest representation: %e or %f          | 392.65       |
+| G         | Use the shortest representation: %E or %F          | 392.65       |
+| a         | Hexadecimal floating point, lowercase              | -0xc.90fep-2 |
+| A         | Hexadecimal floating point, uppercase              | -0XC.90FEP-2 |
+| c         | Character                                          | a            |
+
+You may notice that `long int`s and `unsigned int`s and so on are not in this
+list.  Just as regular types can be modified with type modifiers, specifiers
+can be modified as well.  You can use `l` for `long`, `ll` for `long long`,
+`u` for `unsigned` and so on.  An example from 
+[cplusplus.com][http://www.cplusplus.com/reference/cstdio/printf/]
+is shown below.
+
+{"code": "snippets/printf.c"}
+
 -------------------------------------------------------------------------------
 # Conclusion
 
