--- a/source/1.md
+++ b/source/1.md
@@ -231,7 +231,9 @@ can be modified as well.  You can use `l` for `long`, `ll` for `long long`,
 [cplusplus.com][http://www.cplusplus.com/reference/cstdio/printf/]
 is shown below.
 
+```snippet
 {"code": "snippets/printf.c"}
+```
 
 -------------------------------------------------------------------------------
 # Conclusion
